<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- MainActivity -->
    <string name="app_name">Budget Counter</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="fifty">.50</string>
    <string name="ok">OK</string>
    <string name="backspace">Backspace</string>

    <!-- MainActivity menu-->
    <string name="settings">Settings</string>
    <string name="weeks_overview">Weeks overview</string>
    <string name="remove_data">Remove all data</string>

    <!-- SettingsActivity -->
    <string-array name="currency_string_array">
        <item name="1">Euro €</item>
        <item name="2">Pound sterling £</item>
    </string-array>
    <string-array name="currency_value_array">
        <item name="1">00.00€</item>
        <item name="2">£00.00</item>
    </string-array>
    <string name="currency">Currency</string>
    <string name="currency_prompt">Choose currency</string>
    <string name="budget">Current week\'s budget</string>
    <string name="week_start">Week starts on</string>
    <string-array name="week_start_string_array">
        <item name="1">Sunday</item>
        <item name="2">Monday</item>
    </string-array>
    <string-array name="week_start_value_array">
        <item name="1">1</item>
        <item name="2">2</item>
    </string-array>
    <string name="week_start_prompt">Choose start of the week</string>
    <string name="default_currency">00.00€</string>
    <string name="default_week_start">2</string>

    <string name="currency_key">pref_currency</string>
    <string name="budget_key">pref_budget</string>
    <string name="week_start_key">pref_week_start</string>

    <string name="db_date_format">yyyy-MM-dd</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="datetime_format">yyyy-MM-dd HH:mm:ss.SSS</string>

    <!-- Remove data dialog -->
    <string name="rdd_title">Remove all data</string>
    <string name="rdd_message">Remove all stored application data?</string>

    <!-- WeeksOverviewActivity -->
    <string name="total">TOTAL: </string>
    <string name="weeks_delete">Delete</string>

    <!-- CutsOverviewActivity -->
    <string name="cuts_overview">Cuts overview</string>
    <string name="cut_budget">BUDGET: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="week_total">REMAINDER: </string>
    <string name="cuts_delete">Delete</string>
</resources>
